Change "Appetizer" to "Snack"

--- a/templates/editMenuItem.html
+++ b/templates/editMenuItem.html
@@ -16,7 +16,7 @@
 	<p>Calories:</p>
 		<input type ='text' size='30' name='calories' placeholder = '{{item.calories}}'>
 	<p>Course:</p>
-		<input type ='radio'  name='course' value ='Appetizer'>Appetizer</br>
+		<input type ='radio'  name='course' value ='Snack'>Snack</br>
 		<input type ='radio'  name='course' value ='Entree'>Entree</br>
 		<input type ='radio'  name='course' value ='Dessert'>Dessert</br>
 		<input type ='radio'  name='course' value ='Beverage'>Beverage</br>
