--- a/templates/menu.html
+++ b/templates/menu.html
@@ -39,9 +39,9 @@
 		{% endfor %}
 
 
-		<h2>Appetizers: </h2>
+		<h2>Snack: </h2>
 		{% for item in items %}
-		{% if item.course == 'Appetizer' %}
+		{% if item.course == 'Snack' %}
 		<h4>{{item.name}}</h4>
 		<a href='{{url_for('editMenuItem', restaurant_id=restaurant.id, menu_id=item.id)}}'>Edit</a></br>
 		<a href='{{url_for('deleteMenuItem', restaurant_id=restaurant.id, menu_id=item.id)}}' >Delete</a>
