--- a/templates/newMenuItem.html
+++ b/templates/newMenuItem.html
@@ -12,7 +12,7 @@
 	<p>Calories:</p>
 		<input type ='text' size='30' name='calories'>
 	<p>Course:</p>
-		<input type ='radio'  name='course' value ='Appetizer'>Appetizer</br>
+		<input type ='radio'  name='course' value ='Snack'>Snack</br>
 		<input type ='radio'  name='course' value ='Entree'>Entree</br>
 		<input type ='radio'  name='course' value ='Dessert'>Dessert</br>
 		<input type ='radio'  name='course' value ='Beverage'>Beverage</br>
