Extend the text box for addObservation.  Change "restaurant" to "entry" when have no entries.

--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -37,8 +37,8 @@
 {% endfor %}
 
 {% else %}
-You do not have any restaurants yet.</br></br>
-<a href='#' >Create a New Restaurant</a></br>
+You do not have any entries yet.</br></br>
+<a href='#' >Create a New Entry</a></br>
 {% endif %}
 
 
