--- a/templates/newRestaurant.html
+++ b/templates/newRestaurant.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<h1>Add New Restaurant</h1>
+<h1>Add New Entry</h1>
 
 <form action='{{url_for('newRestaurant')}}' method='POST'>
 
